Alignment issue firefox related css changes

--- a/resident-ui/src/styles.css
+++ b/resident-ui/src/styles.css
@@ -472,8 +472,9 @@ button{
   height: auto;
 }
 
-.cdk-global-overlay-wrapper, .cdk-overlay-container{
+.cdk-global-overlay-wrapper{
   /*overflow-y: auto;*/
+  align-items: flex-start !important;
 }
 
 .info-icon-button{
